{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 60,
  "lineage": "a9e3278b-6d05-cb01-1761-cec5f82edc02",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "work",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc5d935ebf8bc3bc",
            "arn": "arn:aws:ec2:us-east-1:137814145189:instance/i-03748b7c5a7a638c9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03748b7c5a7a638c9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "lab1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c8ceaee4182049ec",
            "private_dns": "ip-10-0-1-129.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.129",
            "public_dns": "ec2-44-200-154-119.compute-1.amazonaws.com",
            "public_ip": "44.200.154.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07a31ee5027288115",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eb49701811d0ef14",
            "tags": {
              "Name": "felix-work0"
            },
            "tags_all": {
              "Name": "felix-work0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07a2eecaeb8f4ba80"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.work-sg",
            "module.vpc.aws_subnet.sn1",
            "module.vpc.aws_vpc.felix-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "felix-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137814145189:internet-gateway/igw-0446cbaaaef9e606c",
            "id": "igw-0446cbaaaef9e606c",
            "owner_id": "137814145189",
            "tags": {
              "Name": "felix-igw"
            },
            "tags_all": {
              "Name": "felix-igw"
            },
            "vpc_id": "vpc-0e4b27aa313626d03"
          },
          "dependencies": [
            "module.vpc.aws_vpc.felix-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137814145189:route-table/rtb-06945d84004b9aea5",
            "id": "rtb-06945d84004b9aea5",
            "owner_id": "137814145189",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0446cbaaaef9e606c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "felix-route1"
            },
            "tags_all": {
              "Name": "felix-route1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4b27aa313626d03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.felix-igw",
            "module.vpc.aws_vpc.felix-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rp1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061973faaa70cf579",
            "route_table_id": "rtb-06945d84004b9aea5",
            "subnet_id": "subnet-0eb49701811d0ef14"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.felix-igw",
            "module.vpc.aws_route_table.route1",
            "module.vpc.aws_subnet.sn1",
            "module.vpc.aws_vpc.felix-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "work-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137814145189:security-group/sg-07a2eecaeb8f4ba80",
            "description": "Allow traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a2eecaeb8f4ba80",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "work-sg",
            "name_prefix": "",
            "owner_id": "137814145189",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "felix-work-sg"
            },
            "tags_all": {
              "Name": "felix-work-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4b27aa313626d03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.felix-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137814145189:subnet/subnet-0eb49701811d0ef14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb49701811d0ef14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137814145189",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "felix-sn1"
            },
            "tags_all": {
              "Name": "felix-sn1"
            },
            "vpc_id": "vpc-0e4b27aa313626d03"
          },
          "dependencies": [
            "module.vpc.aws_vpc.felix-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "felix-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137814145189:vpc/vpc-0e4b27aa313626d03",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02963e4f81fdb9fdb",
            "default_route_table_id": "rtb-0acfd06ded5e93e72",
            "default_security_group_id": "sg-0760b8757661564ab",
            "dhcp_options_id": "dopt-0591cd4669815b7d5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e4b27aa313626d03",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0acfd06ded5e93e72",
            "owner_id": "137814145189",
            "tags": {
              "Name": "felix-vpc",
              "Project": "felix"
            },
            "tags_all": {
              "Name": "felix-vpc",
              "Project": "felix"
            }
          }
        }
      ]
    }
  ]
}